--- a/SHA_Shop/SHA_Shop.csproj
+++ b/SHA_Shop/SHA_Shop.csproj
@@ -46,12 +46,18 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="PagedList, Version=1.17.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
+    <Reference Include="PagedList.Mvc, Version=4.5.0.0, Culture=neutral, PublicKeyToken=abbb863e9397c5e1, processorArchitecture=MSIL">
+      <HintPath>..\packages\PagedList.Mvc.4.5.0.0\lib\net40\PagedList.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -129,6 +135,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\BlogController.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\CheckoutController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -139,17 +146,17 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Admin.cs" />
+    <Compile Include="Models\Animistrator.cs" />
     <Compile Include="Models\CHITIETDONHANG.cs" />
     <Compile Include="Models\DANHMUC.cs" />
     <Compile Include="Models\DONHANG.cs" />
     <Compile Include="Models\KHUYENMAI.cs" />
-    <Compile Include="Models\LienHe.cs" />
-    <Compile Include="Models\SHAContext.cs" />
+    <Compile Include="Models\LIENHE.cs" />
+    <Compile Include="Models\SHAshopDB.cs" />
     <Compile Include="Models\NGUOIDUNG.cs" />
-    <Compile Include="Models\PhieuPhanHoi.cs" />
+    <Compile Include="Models\PHIEUPHANHOI.cs" />
     <Compile Include="Models\SANPHAM.cs" />
-    <Compile Include="Models\Slide.cs" />
+    <Compile Include="Models\SLIDE.cs" />
     <Compile Include="Models\sysdiagram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -160,9 +167,10 @@
     <Content Include="Assets\user\css\jquery-ui.min.css" />
     <Content Include="Assets\user\css\nice-select.css" />
     <Content Include="Assets\user\css\owl.carousel.min.css" />
+    <Content Include="Assets\user\css\sb-admin-2.css" />
     <Content Include="Assets\user\css\slicknav.min.css" />
     <Content Include="Assets\user\css\style.css" />
-    <Content Include="Assets\user\css\login.css" />
+    <Content Include="Assets\user\css\User.css" />
     <Content Include="Assets\user\fonts\ElegantIcons.svg" />
     <Content Include="Assets\user\fonts\fontawesome-webfont.svg" />
     <Content Include="Assets\user\img\banner\banner-1.jpg" />
@@ -214,6 +222,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -247,6 +256,9 @@
     <Content Include="Assets\user\sass\_shoping-cart.scss" />
     <Content Include="Assets\user\sass\_sidebar.scss" />
     <Content Include="Assets\user\sass\_variable.scss" />
+    <Content Include="..\.editorconfig">
+      <Link>.editorconfig</Link>
+    </Content>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -280,6 +292,8 @@
     <Content Include="Views\ProductDetail\Index.cshtml" />
     <Content Include="Views\Home\HotProducts.cshtml" />
     <Content Include="Views\User\Register.cshtml" />
+    <Content Include="Views\Product\ListProduct.cshtml" />
+    <Content Include="Views\Category\CategoryPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
