--- a/SHA_Shop/Web.config
+++ b/SHA_Shop/Web.config
@@ -5,9 +5,9 @@
   -->
 <configuration>
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -21,7 +21,6 @@
       <forms loginUrl="User/Login"></forms>
     </authentication>
   </system.web>
-  
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -66,8 +65,6 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-
-  <connectionStrings>
-    <add name="SHAshopDB" connectionString="data source=LAPTOP-O1S0CP0S\SQLEXPRESS01;initial catalog=SHA-SHOP;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-</configuration>
+ 
+  
+<connectionStrings><add name="SHAshopDB" connectionString="data source=LAPTOP-O1S0CP0S\SQLEXPRESS01;initial catalog=SHA_Shop;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
