--- a/SHA_Shop/Web.config
+++ b/SHA_Shop/Web.config
@@ -65,6 +65,8 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
- 
+  <connectionStrings>
+    <add name="SHAShopDB" connectionString="data source=LAPTOP-O1S0CP0S\SQLEXPRESS01;initial catalog=SHA_Shop;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   
-<connectionStrings><add name="SHAshopDB" connectionString="data source=LAPTOP-O1S0CP0S\SQLEXPRESS01;initial catalog=SHA_Shop;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings></configuration>
+  </connectionStrings>
+</configuration>
