Create UI About Us,

--- a/SHA_Shop/SHA_Shop.csproj
+++ b/SHA_Shop/SHA_Shop.csproj
@@ -135,7 +135,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
-    <Compile Include="Controllers\BlogController.cs" />
+    <Compile Include="Controllers\AboutController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -186,6 +186,7 @@
     <Content Include="Assets\user\img\blog\sidebar\sr-1.jpg" />
     <Content Include="Assets\user\img\blog\sidebar\sr-2.jpg" />
     <Content Include="Assets\user\img\blog\sidebar\sr-3.jpg" />
+    <Content Include="Assets\user\img\bread2.jpg" />
     <Content Include="Assets\user\img\cart\cart-1.jpg" />
     <Content Include="Assets\user\img\cart\cart-2.jpg" />
     <Content Include="Assets\user\img\cart\cart-3.jpg" />
@@ -202,8 +203,26 @@
     <Content Include="Assets\user\img\featured\feature-6.jpg" />
     <Content Include="Assets\user\img\featured\feature-7.jpg" />
     <Content Include="Assets\user\img\featured\feature-8.jpg" />
+    <Content Include="Assets\user\img\founder\huong1.png" />
     <Content Include="Assets\user\img\hero\banner.jpg" />
+    <Content Include="Assets\user\img\logo.png" />
+    <Content Include="Assets\user\img\logo1.png" />
     <Content Include="Assets\user\img\payment-item.png" />
+    <Content Include="Assets\user\img\product\cake10.jpg" />
+    <Content Include="Assets\user\img\product\cake11.jpg" />
+    <Content Include="Assets\user\img\product\cake12.jpg" />
+    <Content Include="Assets\user\img\product\cake2.jpg" />
+    <Content Include="Assets\user\img\product\cake3.jpg" />
+    <Content Include="Assets\user\img\product\cake4.jpg" />
+    <Content Include="Assets\user\img\product\cake5.jpg" />
+    <Content Include="Assets\user\img\product\cake6.jpg" />
+    <Content Include="Assets\user\img\product\cake7.jpg" />
+    <Content Include="Assets\user\img\product\cake8.jpg" />
+    <Content Include="Assets\user\img\product\cake9.jpg" />
+    <Content Include="Assets\user\img\product\cake_1.jpg" />
+    <Content Include="Assets\user\img\product\cake_2.jpg" />
+    <Content Include="Assets\user\img\product\cake_3.jpg" />
+    <Content Include="Assets\user\img\product\cake_4.jpg" />
     <Content Include="Assets\user\img\product\cat1.jpg" />
     <Content Include="Assets\user\img\product\cat2.jpg" />
     <Content Include="Assets\user\img\product\cat3.jpg" />
@@ -284,7 +303,7 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Contact\Index.cshtml" />
     <Content Include="Views\User\Login.cshtml" />
-    <Content Include="Views\Blog\Index.cshtml" />
+    <Content Include="Views\About\Index.cshtml" />
     <Content Include="Views\ShopCart\Index.cshtml" />
     <Content Include="Views\Product\Index.cshtml" />
     <Content Include="Views\Home\LatestProducts.cshtml" />
