--- a/SHA_Shop/Web.config
+++ b/SHA_Shop/Web.config
@@ -67,6 +67,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="SHAShopDB" connectionString="data source=LAPTOP-O1S0CP0S\SQLEXPRESS01;initial catalog=SHA_Shop;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  
+    <add name="SHAContextDB" connectionString="data source=LAPTOP-O1S0CP0S\SQLEXPRESS01;initial catalog=SHA_Shop;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
